# unmanic

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .grc.conf.unmanic.logs  Dockerfile  MANIFEST.in  README.md  __init__.py  config.py  pytest.ini  requirements-dev.txt  requirements.txt  service.py  setup.cfg  setup.py  version  versioninfo.py
.github/: FUNDING.yml
devops/: README.md  ffmpeg_comand.sh  frontend_install.sh  frontend_watch.sh  gitlab-runner.sh  local_dev_venv.sh  migrations.sh  remove_cached_files.sh  run_docker.sh  tail_dev_logs.sh  update-docker-packages.sh
docker/: Dockerfile  README.md  docker-compose-cifs.yml  docker-compose-nvidia.yml  docker-compose-test.yml  docker-compose-test.yml.bak  docker-compose-testenv.yml  docker-compose-vaapi.yml  run.sh  unmanic_template.xml
docs/: API_AUTOMATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  GENERATING_MASTER_RELEASE.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
lib/: __init__.py  common.py  ffmpeg.py  fileinfo.py  history.py  jobqueue.py  postprocessor.py  task.py  uiserver.py  unlogger.py  worker.py
migrations/: 001_init_schema_table_settings.py  002_add_config-enable_video_encoding.py  002_expand_application_encoder_settings.py  003_add_config-enable_audio_encoding.py  003_historical_records.py  004_add_config-enable_audio_stream_transcoding.py  004_keep_filename_history.py  005_add_config-audio_stream_encoder.py  006_add_config-enable_audio_stream_stereo_cloning.py  007_add_config-audio_codec_cloning.py  008_add_config-audio_stream_encoder_cloning.py
(+722 files in other folders)
