[metadata]
name = unmanic
license = GPLv3
long_description = file: README.md, LICENSE

[options]
python_requires = >=3
zip_safe = False
include_package_data = True

[pycodestyle]
# TODO: Fix these errors
#       - E722 - Replace with try finally
ignore = E722,E241,W293
max-line-length = 120
statistics = True
exclude = venv/**,.idea/**
show-pep8 = False
show-source = False
