[metadata]
name = unmanic
license = GPLv3
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True

[pycodestyle]
# TODO: Fix these errors
ignore = E722,E241,W293
max-line-length = 127
statistics = True
exclude = venv/**,.idea/**,dev_environment/**,dist/**
show-pep8 = False
show-source = False

[flake8]
# TODO: Fix these errors
ignore = E722,E241,W293,F401,F403,F405,F841
max-line-length = 200
exclude = venv/**,.idea/**,dev_environment/**,dist/**
